# goblin-store

./: .gitignore  .gitmodules  BENCHMARKS.md  CMakeLists.txt  README.md  llms-full.txt  llms.txt  wrangler.jsonc
bench/: GOBLIN_BLOBDB_BENCHMARK.md  analyze_channel_micro_latency.py  analyze_goblin_blobdb.py  analyze_mirror_proxy.py  analyze_numa_latency.py  analyze_optane_worker_sweep.py  analyze_rdma_256k.py  audit_process_numa.sh  bench_goblin_and_blobdb.cpp  channel_micro_latency.sh  goblin-benchmark-irqs.service  megaraid-numa.conf  mem_pack.cpp  mirror_make_manifest.py  mirror_origin_server.py  mirror_proxy_benchmark.cpp  monitor_benchmark_resources.py  monitor_nvme_temperature.py  nginx_mirror_origin.sh  numa_bandwidth.sh  numa_first_byte_latency.sh  optane-small-object-benchmark-notes.md  pin_pci_irqs_to_numa.sh  run_mirror_proxy_benchmark.sh  run_optane_concurrency_pair.sh  run_optane_goblin_baseline.sh  run_optane_head_sweep.sh  run_optane_io_chunk_sweep.sh  run_optane_local_numa_concurrency_pair.sh  run_optane_massive_concurrency_pair.sh  run_optane_vinyl_baseline.sh  run_optane_worker_confirmation.sh  run_optane_worker_followup.sh  run_optane_worker_sweep.sh  run_rdma_256k_ib.sh  sha256_keybench.cpp
docs/: embedded-cpp-storage.md  exasock.md  full-filesystem-writes.md  mirror-proxy-benchmark.md  native-rdma-256k-performance.md  numa-first-byte-latency.md  numa-interconnect-bandwidth.md  optane-small-object-benchmark.md  optane-small-object-concurrency-scaling.md  small-object-channel-performance.md
docs/adr/: 0001-thread-per-core-concurrency.md  0002-iouring-rings-shared-drives.md  0003-cache-semantics-head-as-cache.md  0004-cpp23-toolchain.md  0005-protocol-surface.md  0006-positional-tiering-pipeline.md  0007-eviction-policy.md  0008-ram-allocator.md  0009-striping-and-eof.md  0010-write-admission-modes.md  0011-odirect-bypass-page-cache.md  0012-multi-resource-eviction.md  0013-ephemeral-wipe-on-start.md  0014-keyless-digest-identity.md  0015-http-key-derivation.md  0016-bounded-locked-memory.md  0017-buffer-taxonomy.md  0018-concurrency-model.md  0019-access-score-numa-promotion.md  0020-native-rdma-bulk-windows.md  0021-http-mirror-cache.md  README.md
html/: index.html
include/goblin/: store.hpp
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/cpp/: CMakeLists.txt  README.md
python/cpp/cmake/: GoblinStoreClientConfig.cmake.in  goblin-store-client.pc.in
python/cpp/include/goblin/store/: client.hpp  rdma_wire.hpp  transport.hpp
python/cpp/src/: client.cpp  exasock_transport.cpp  exasock_transport_test.hpp  exasock_unavailable.cpp  rdma_transport.cpp  rdma_unavailable.cpp
python/cpp/tests/: test_client.cpp  test_exasock_transport.cpp  test_rdma_wire.cpp
python/cpp/tests/consumer/: CMakeLists.txt  main.cpp
python/cpp/tools/: rdma_benchmark.cpp
python/goblin_store/: __init__.py
python/src/: bindings.cpp
python/tests/: test_api.py  test_exasock_integration.py  test_rdma_integration.py
scripts/: build-docs.sh
src/goblin/: main.cpp  store.cpp
src/goblin/common/: config.cpp  config.hpp  error.cpp  error.hpp  types.hpp
src/goblin/core/: buffer_pool.cpp  buffer_pool.hpp  reactor.cpp  reactor.hpp  stats.hpp
src/goblin/crypto/: sha256.cpp  sha256.hpp  sha256_shani.inc
src/goblin/http/: http_loop.cpp  http_loop.hpp  https_loop.cpp  https_loop.hpp  key_derivation.cpp  key_derivation.hpp  mirror.cpp  mirror.hpp  mirror_cache.cpp  mirror_cache.hpp  request.cpp  request.hpp  source_loader.cpp  source_loader.hpp
src/goblin/net/: connection_dispatcher.cpp  connection_dispatcher.hpp  listener.cpp  listener.hpp  numa.cpp  numa.hpp  rdma_server.cpp  rdma_server.hpp  readiness_stream_io.cpp  stream_io.cpp  stream_io.hpp  stream_loop.cpp  stream_loop.hpp
src/goblin/protocol/memcache/: auth.cpp  auth.hpp  event_loop.cpp  event_loop.hpp  protocol.cpp  protocol.hpp  rdma_session.cpp  rdma_session.hpp  server.cpp  server.hpp  stats_format.cpp  stats_format.hpp  tls_event_loop.cpp  tls_event_loop.hpp
src/goblin/storage/: drive_pool.cpp  drive_pool.hpp  eviction.cpp  eviction.hpp  file_handle_cache.cpp  file_handle_cache.hpp  index.cpp  index.hpp  layout.cpp  layout.hpp  numa_head_scores.cpp  numa_head_scores.hpp  pool_dir.cpp  pool_dir.hpp  s3fifo.cpp  s3fifo.hpp  striped_io.cpp  striped_io.hpp  tier_manager.cpp  tier_manager.hpp
src/goblin/tls/: context.cpp  context.hpp
src/goblin/tools/: bench.cpp  path_prep.cpp
tests/: mini_test.hpp  test_auth.cpp  test_buffer_pool.cpp  test_config.cpp  test_connection_dispatcher.cpp  test_crypto.cpp  test_drive_pool.cpp  test_event_loop.cpp  test_file_handle_cache.cpp  test_http_loop.cpp  test_http_request.cpp  test_https_loop.cpp  test_index.cpp  test_key_derivation.cpp  test_layout.cpp  test_main.cpp  test_memcache.cpp  test_memcache_differential.cpp  test_memcache_tls.cpp  test_mirror_cache.cpp  test_mirror_service.cpp  test_numa.cpp  test_numa_head_scores.cpp  test_pool_dir.cpp  test_rdma_session.cpp  test_reactor.cpp  test_s3fifo.cpp  test_source_loader.cpp  test_stats.cpp  test_store.cpp  test_stream_io.cpp  test_striped_io.cpp  test_tier_manager.cpp  test_tls.cpp  tests.cpp
